Fixed amount overlap issue

--- a/src/app/shared/components/counter-box/counter-box.component.less
+++ b/src/app/shared/components/counter-box/counter-box.component.less
@@ -22,7 +22,7 @@
             display: grid;
             place-items: center;
             font-weight: 400;
-            font-size: 48px;
+            font-size: 32px;
         }
 
         span.text {
@@ -44,7 +44,7 @@
                 display: grid;
                 place-items: center;
                 font-weight: 400;
-                font-size: 44px;
+                font-size: 32px;
                 line-height: 1.3;
             }
             .icon {
